Frontend/HomeHunter.css
/* ... */
/*More stuff I got off the internet that I don't understand...
/* Fallbacks */
/*
.no-csstransforms .top {
  position: static;
}

.no-csstransforms .drawer nav {
  display: none;
}

.no-csstransforms .drawer.active nav {
  display: block;
}
*/

.content-drawer {
    position: absolute;
    width:100%;
    margin-top: -16px;
    margin-left: -20px;
    z-index: 1;
    /*display:none;*/
}

/* Accordian menu drop down test END */

@media(max-width: 900px){
    .content {
        width: 100%;
    }
    .content-left {
        width:93%;
        margin-top: 15px;
        margin-bottom: 15px;
        margin-right: 1%;
        margin-left: 1%;
        padding-left: 2.5%;
        padding-right: 2.5%;
    }
    .content-right {
        width:97%;
        margin-top: 1%;
        margin-bottom: 2%;
        margin-right: 2.5%;
        margin-left: 0.5%;;

        float:left;
        position: relative;
    }
    #header-top {
        width: 90%;
        padding-left: 5%;
        padding-right: 5%;
    }
    #nav {
        width: 90%;
        padding-left: 5%;
        padding-right: 5%;
    }
    #footer-legal {
        width: 90%;
        padding-left: 5%;
        padding-right: 5%;
    }
    .footer-copyright {
        width: 90%;
        padding-left: 5%;
        padding-right: 5%;
    }
    .overlay-center {
        width: 85%;
        height: 200px;
        position: absolute;
        margin: 0px auto;

        top: 250px;
        left: 5%;
    }
    .overlay-listers {
        /*visibility: hidden;*/
        position: absolute; 
        width: 400px;
        height: 200px;
        margin: 0px auto;
        
        top: 0%;
        right: 5%;
        left: 5%;
    }
    #index-large {
        display: none;
    }
    #index-small {
        margin-left: 10px;
    }
    #header-link-container {
        display: none;
    }
    #content-login, #content-register {
        width: 100%;
    }
    .footer-col {
        width:100%;
        margin-bottom: 10px;
    }
    #divider-bar-temp {
        display: none;
    }
    #listing-description {
        width: 100%;
        margin-left: 0px;
        margin-right: 0px;
    }
    #listing-map {
        width: 100%;
        margin-left: 0px;
        margin-right: 0px;
    }
    #listing-floorplan{
        width: 100%;
        margin-left: 0px;
        margin-right: 0px;       
    }
    #listing-school{
        width: 100%;
        margin-left: 0px;
        margin-right: 0px;
    }
    #listing-transport{
        width: 100%;
        margin-left: 0px;
        margin-right: 0px;
    }
    #listing-features{
        width: 100%;
        margin-left: 0px;
        margin-right: 0px;
    }
    .price-col {
        padding: 0px;
    }
    #content-priceplan{
        height:600px;
        width: 100%;
        max-width: 500px;
        margin: 0px auto;
    }
    #content-steps {
        height:650px;
        width:100%;  
        max-width:500px;
    }
    .content-slider {
        height:300px;
        padding-top:20px;
    }
    #menu-top {
        width: 80px;
    }
    .content-image img{
        height: 250px;
        width: 350px;
    }
}

@media(min-width:900px){
    .content {
        width:1000px;
        float: center;
        margin: 0 auto;
    }
    .content-left {
        width:1000px;
        padding-left: 15px;
        padding-right: 15px;
    }
    .content-right {
        margin-top: 15px;
        margin-bottom:2.5%;
        margin-left:715px;
        margin-right: 5px;

        width:260px;

        float:left;
        position: fixed;
    }
    #header-top {
        width:1000px;
    }
    #nav {
        width:1000px;
    }
    #footer-legal {
        width: 1000px;
    }
    .footer-copyright {
        width: 1000px;
    }
    .overlay-center {
        width: 600px;
        height: 330px;
        position: relative;
        top:80px;
        float:left;
        margin-left: 0px;

        /*top: 20px;
        left: 0px;*/
    }
    .overlay-listers {
        position: relative; 
        width: 200px;
        height: 320px;

        padding-top: 10px;
        float:right;

        /*top: 0%;
        right: 10%;
        left: 500px;*/
    }
    #index-small {
        display:none;
    }
    #menu-top { 
        display:none;
    }
    .content-drawer {
        display:none;
    }
    #content-login, #content-register {
        width: 1000px;
    }
    .footer-col {
        width:330px;
    }
    #content-priceplan{
        height:310px;
        width: 1000px;
        margin: 0px auto;
    }
    #content-steps {
        height:300px;
        width:1000px;
    }
    .content-slider {
        height:300px;
        padding-top:20px;
    }
    #overlay-center-text {
        font-size: 30px;
        margin: 50px;
        margin-bottom: 40px;
    }
    #overlay-center-fineprint {
        margin-top: 25px;
        font-size: 15px;
    }
    .content-image img{
        height: 250px;
        width: 350px;
    }
}
/* ... */

